--- a/blog-front/package.json
+++ b/blog-front/package.json
@@ -17,8 +17,13 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.3.1",
+    "axios": "^1.8.4",
+    "element-plus": "^2.9.7",
+    "md-editor-v3": "^5.4.5",
     "pinia": "^3.0.1",
     "vue": "^3.5.13",
+    "vue-cropper": "^1.1.4",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
@@ -43,6 +48,8 @@
     "oxlint": "^0.15.13",
     "prettier": "3.5.3",
     "typescript": "~5.8.0",
+    "unplugin-auto-import": "^19.1.2",
+    "unplugin-vue-components": "^28.4.1",
     "vite": "^6.2.1",
     "vite-plugin-vue-devtools": "^7.7.2",
     "vitest": "^3.0.8",
